--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,27 @@
+server:
+  port: 9296
 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
+logging:
+  pattern:
+    level: '%5p [${spring.application.name:},%X{traceId},%X{spanId}]'
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
