--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,23 @@
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
-
-management.endpoints.web.exposure.include=*
-management.tracing.enabled=true
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
-
-logging.pattern.level=%5p [${spring.application.name:},%X{traceId},%X{spanId}]
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+logging:
+  pattern:
+    level: '%5p [${spring.application.name:},%X{traceId},%X{spanId}]'
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
